<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/button">

        <ImageView
            android:id="@+id/image_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/button"
            android:contentDescription="@string/uploaded_image" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/looks_like"
        android:textStyle="bold"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_breed"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/predicted_breed_image" />

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_breed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breed_name"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_confidence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/confidence_default"
                android:textSize="16sp"
                android:textColor="#666666" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
